--- a/Natours/scss/components/_popup.scss
+++ b/Natours/scss/components/_popup.scss
@@ -35,7 +35,7 @@
         width: 66.6666667%;
         display: table-cell;
         vertical-align: middle;
-        padding: 3rem 5rem;
+        padding: 0 5rem;
     }
 
     &__img {
